# ogls

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
